force-app/main/default/objects/maps__AdvRouteDataSet__c/maps__AdvRouteDataSet__c.object-meta.xml
<CustomObject>
    <label>Maps Advanced Route Data Set</label>
    <nameField>
        <label>Maps Advanced Route Data Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Advanced Route Data Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>