force-app/main/default/objects/maps__AdvRouteDataSet__c/fields/maps__Active__c.field-meta.xml
<CustomField>
    <fullName>maps__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This tells us if the data set is active or needs completed</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>