force-app/main/default/objects/maps__AdvRouteDataSet__c/fields/maps__AdvRouteTemplate__c.field-meta.xml
<CustomField>
    <fullName>maps__AdvRouteTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maps Advanced Route Template</label>
    <referenceTo>maps__AdvRouteTemplate__c</referenceTo>
    <relationshipLabel>Maps Advanced Route Data Sets</relationshipLabel>
    <relationshipName>AdvRouteDataSets</relationshipName>
    <type>Lookup</type>
</CustomField>