force-app/main/default/objects/maps__AdvRouteDataSet__c/fields/maps__AssignmentFieldApi__c.field-meta.xml
<CustomField>
    <fullName>maps__AssignmentFieldApi__c</fullName>
    <label>Assignment Field Api</label>
    <length>255</length>
    <type>Text</type>
</CustomField>