force-app/main/default/objects/maps__AdvRouteDataSet__c/fields/maps__AssignmentObject__c.field-meta.xml
<CustomField>
    <fullName>maps__AssignmentObject__c</fullName>
    <label>Assignment Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>