force-app/main/default/objects/maps__AdvRouteDataSet__c/fields/maps__AssignmentRelationshipFieldApi__c.field-meta.xml
<CustomField>
    <fullName>maps__AssignmentRelationshipFieldApi__c</fullName>
    <label>Assignment Relationship Field Api</label>
    <length>255</length>
    <type>Text</type>
</CustomField>