force-app/main/default/objects/maps__AdvRouteDataSet__c/fields/maps__AssignmentUserFieldFilters__c.field-meta.xml
<CustomField>
    <fullName>maps__AssignmentUserFieldFilters__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignment User Field Filters</label>
    <referenceTo>maps__AdvRouteQueryFilterGrouping__c</referenceTo>
    <relationshipLabel>Maps Advanced Route Data Sets (Assignment User Field Filters)</relationshipLabel>
    <relationshipName>AdvRouteAssignmentUserFieldFilters</relationshipName>
    <type>Lookup</type>
</CustomField>