force-app/main/default/objects/maps__AdvRouteDataSet__c/fields/maps__BaseObject__c.field-meta.xml
<CustomField>
    <fullName>maps__BaseObject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Base Object</label>
    <referenceTo>maps__BaseObject__c</referenceTo>
    <relationshipLabel>Maps Advanced Route Data Sets</relationshipLabel>
    <relationshipName>MapsAdvancedRouteDataSets</relationshipName>
    <type>Lookup</type>
</CustomField>