force-app/main/default/objects/maps__AdvRouteDataSet__c/fields/maps__BaseObjectFilters__c.field-meta.xml
<CustomField>
    <fullName>maps__BaseObjectFilters__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Base Object Filters</label>
    <referenceTo>maps__AdvRouteQueryFilterGrouping__c</referenceTo>
    <relationshipLabel>Maps Adv Route Data Sets (Base Obj Filters)</relationshipLabel>
    <relationshipName>AdvRouteDataSetsBaseObjFilters</relationshipName>
    <type>Lookup</type>
</CustomField>