force-app/main/default/objects/maps__AdvRouteDataSet__c/fields/maps__BufferTimeDefault__c.field-meta.xml
<CustomField>
    <fullName>maps__BufferTimeDefault__c</fullName>
    <label>Buffer Time Default</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>