force-app/main/default/objects/maps__AdvRouteDataSet__c/fields/maps__CompletedVisitAssignmentFieldApi__c.field-meta.xml
<CustomField>
    <fullName>maps__CompletedVisitAssignmentFieldApi__c</fullName>
    <label>Completed Visit Assignment Field Api</label>
    <length>255</length>
    <type>Text</type>
</CustomField>