force-app/main/default/objects/maps__AdvRouteDataSet__c/fields/maps__CompletedVisitDateTimeFieldApi__c.field-meta.xml
<CustomField>
    <fullName>maps__CompletedVisitDateTimeFieldApi__c</fullName>
    <label>Completed Visit Date/DateTime Field Api</label>
    <length>255</length>
    <type>Text</type>
</CustomField>