force-app/main/default/objects/maps__AdvRouteDataSet__c/fields/maps__CompletedVisitObjectApi__c.field-meta.xml
<CustomField>
    <fullName>maps__CompletedVisitObjectApi__c</fullName>
    <label>Completed Visit Object Api</label>
    <length>255</length>
    <type>Text</type>
</CustomField>