force-app/main/default/objects/maps__AdvRouteDataSet__c/fields/maps__CompletedVisitRoutedObjFieldApi__c.field-meta.xml
<CustomField>
    <fullName>maps__CompletedVisitRoutedObjFieldApi__c</fullName>
    <label>Completed Visit Routed Obj Field Api</label>
    <length>255</length>
    <type>Text</type>
</CustomField>