force-app/main/default/objects/maps__AdvRouteDataSet__c/fields/maps__CreatedFromAdvRouteTemplate__c.field-meta.xml
<CustomField>
    <fullName>maps__CreatedFromAdvRouteTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created From Template</label>
    <referenceTo>maps__AdvRouteTemplate__c</referenceTo>
    <relationshipLabel>Maps Advanced Route Data Sets (Created From)</relationshipLabel>
    <relationshipName>AdvRouteDataSetsCreatedFrom</relationshipName>
    <type>Lookup</type>
</CustomField>