force-app/main/default/objects/maps__AdvRouteDataSet__c/fields/maps__FutureVisitFilters__c.field-meta.xml
<CustomField>
    <fullName>maps__FutureVisitFilters__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Future Visit Filters</label>
    <referenceTo>maps__AdvRouteQueryFilterGrouping__c</referenceTo>
    <relationshipLabel>Maps Advanced Route Data Sets (Future Visit Filters)</relationshipLabel>
    <relationshipName>AdvRouteDataSetsFutureVisitFilters</relationshipName>
    <type>Lookup</type>
</CustomField>