force-app/main/default/objects/maps__AdvRouteDataSet__c/fields/maps__MinDaysBetweenVisitsDefault__c.field-meta.xml
<CustomField>
    <fullName>maps__MinDaysBetweenVisitsDefault__c</fullName>
    <label>Min Days Between Visits Default</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>