force-app/main/default/objects/maps__AdvRouteDataSet__c/fields/maps__MinDaysBetweenVisitsFieldApi__c.field-meta.xml
<CustomField>
    <fullName>maps__MinDaysBetweenVisitsFieldApi__c</fullName>
    <label>Min Days Between Visits Field Api</label>
    <length>255</length>
    <type>Text</type>
</CustomField>