force-app/main/default/objects/maps__AdvRouteDataSet__c/fields/maps__OutputDefaultValues__c.field-meta.xml
<CustomField>
    <fullName>maps__OutputDefaultValues__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Output Default Values</label>
    <referenceTo>maps__AdvRouteDefaultValuesGrouping__c</referenceTo>
    <relationshipLabel>Maps Advanced Route Data Sets</relationshipLabel>
    <relationshipName>AdvRouteDataSets</relationshipName>
    <type>Lookup</type>
</CustomField>