force-app/main/default/objects/maps__AdvRouteDataSet__c/fields/maps__Priority__c.field-meta.xml
<CustomField>
    <fullName>maps__Priority__c</fullName>
    <label>Priority</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>