force-app/main/default/objects/maps__AdvRouteDataSet__c/fields/maps__SavedQueryId__c.field-meta.xml
<CustomField>
    <fullName>maps__SavedQueryId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Saved Query</label>
    <referenceTo>maps__MarkerLayer__c</referenceTo>
    <relationshipLabel>Maps Advanced Route Data Sets</relationshipLabel>
    <relationshipName>AdvRouteDataSets</relationshipName>
    <type>Lookup</type>
</CustomField>