force-app/main/default/objects/maps__AdvRouteDataSet__c/fields/maps__SuggestedFrequency__c.field-meta.xml
<CustomField>
    <fullName>maps__SuggestedFrequency__c</fullName>
    <label>Suggested Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>