force-app/main/default/objects/maps__AdvRouteDataSet__c/fields/maps__Tooltip11__c.field-meta.xml
<CustomField>
    <fullName>maps__Tooltip11__c</fullName>
    <label>Tooltip 11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>