force-app/main/default/objects/maps__AdvRouteDataSet__c/fields/maps__UseRelatedAssignmentObject__c.field-meta.xml
<CustomField>
    <fullName>maps__UseRelatedAssignmentObject__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag tells us if a data set is using a related object as the assignment criteria</description>
    <label>Use Related Assignment Object</label>
    <type>Checkbox</type>
</CustomField>