force-app/main/default/objects/maps__AdvRouteDataSet__c/fields/maps__VisitDurationDefault__c.field-meta.xml
<CustomField>
    <fullName>maps__VisitDurationDefault__c</fullName>
    <label>Visit Duration Default</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>