force-app/main/default/objects/maps__AdvRouteDataSet__c/fields/maps__VisitDurationFieldApi__c.field-meta.xml
<CustomField>
    <fullName>maps__VisitDurationFieldApi__c</fullName>
    <label>Visit Duration Field Api</label>
    <length>255</length>
    <type>Text</type>
</CustomField>