force-app/main/default/objects/maps__AdvRouteDataSet__c/fields/maps__VisitWindowsFieldApi__c.field-meta.xml
<CustomField>
    <fullName>maps__VisitWindowsFieldApi__c</fullName>
    <label>Visit Windows Field Api</label>
    <length>255</length>
    <type>Text</type>
</CustomField>